tests/errors/assign_undefined.js
// Error: Assigning to undefined variable
function assign_undefined() {
  x = 10;
  return x;
}

assign_undefined();
